added cookie sessions

--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
   "homepage": "https://github.com/sgumirov/opay-ussd#readme",
   "dependencies": {
     "micro": "latest",
+    "micro-cookie-session": "^2.0.0-beta.1",
     "urlencoded-body-parser": "^2.0.1"
   }
 }
